[package]
name = "raytracer"
version = "0.1.0"
authors = ["maxkl <max@maxkl.de>"]
edition = "2018"

[dependencies]
image = "0.23.8"
cgmath = { version = "0.17.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
typetag = "0.1.5"
ron = "0.6.0"
minifb = "0.17.0"
dyn-clone = "1.0.2"
num_cpus = "1.13.0"
nfd = "0.0.4"
