[package]
name = "raytracer_ui"
version = "0.1.0"
authors = ["maxkl <max@maxkl.de>"]
edition = "2018"

[workspace]

[dependencies]
raytracer = { path = "raytracer" }
image = "0.23.8"
serde = { version = "1.0.114", features = ["derive"] }
ron = "0.6.0"
minifb = "0.17.0"
num_cpus = "1.13.0"
nfd = "0.0.4"

[profile.release]
debug = true
